Add simple quick explanation to document

--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Movie recommender\n",
     "# Data: https://www.kaggle.com/rounakbanik/the-movies-dataset/data\n",
-    "# - The data is similar to the movielend 20m dataset. Except it is more extensive and goes into 2017, not 2015\n",
+    "# - The data is similar to the movielens 20m dataset. Except it is more extensive and goes into 2017, not 2015\n",
     "\n",
     "# Sources:\n",
     "# http://antoinevastel.github.io/machine%20learning/python/2016/02/14/svd-recommender-system.html\n",
@@ -32,6 +32,17 @@
     "from scipy.sparse.linalg import svds\n",
     "from sklearn.metrics.pairwise import pairwise_distances\n",
     "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading \n",
+    "First we're loading the movie rating datasets. Downloaded from Kaggle.\n",
+    "- Then, a small inspection of the data in the form of the top 10 rows and some distributions\n",
+    "\n",
+    "__Note: The added explanations in this document have quickly been wroten down and is therefore probably not a good source for thorough understanding.__"
    ]
   },
   {
@@ -258,6 +269,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filtering\n",
+    "- We're filtering out all movies with a too low amount of ratings. Also to reduce dataset/matrix width. -> The result is that we're only going to be able to recommend the more popular movies.\n",
+    "- We're also filtering out users which have too little or too many ratings. Reducing dataset noise\n",
+    "- Finally, to reduce computation time, we randomly sample x% of the users.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -339,6 +360,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CF matrix, validation sets\n",
+    "First we convert out PD dataframe into a matrix. Rows: Users, columns: Movies, every user/movie combination can have a rating. In reality this is an extremely sparse matrix with lots of non filled values. (The movies a user has not rated)\n",
+    "\n",
+    "#### Validation\n",
+    "To validate our results, we randomly remove x% of the ratings from the matrix and remember these values in the test matrix.\n",
+    "- As a validation, we will use the prediction matrix values and calculate the mean absolute distance of the test values with the predicted values (= RMSE)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -354,6 +387,14 @@
     "randMat = np.random.random((filteredDataMatPD.shape[0], filteredDataMatPD.shape[1])) > 0.1\n",
     "trainMat = np.multiply(filteredDataMatPD.as_matrix(),randMat)\n",
     "testMat = np.multiply(filteredDataMatPD.as_matrix(),~randMat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mean normalization\n",
+    "By subtracting the user mean from each user rating (on a column basis = per user), (in addition to the [usual reasons](https://en.wikipedia.org/wiki/Feature_scaling) for normalization), we make sure users with no ratings will receive \"sensible\" predictions. (meaning, the mean rating of the movie). This \"solves\" for the cold start problem."
    ]
   },
   {
@@ -381,6 +422,15 @@
     "sigma = np.diag(s) # svds doesn't actually return a diagonal matrix as sigma\n",
     "predictedRatings = np.dot(np.dot(u, sigma), vt) + trainUserRatingsMean.reshape(-1, 1) #(U.Sigma).VT + mean we subtracted before to get to the original range\n",
     "predictedRatingsPD = pd.DataFrame(predictedRatings, columns = filteredDataMatPD.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validation\n",
+    "We validate by computing the RMSE on the predicted matrix with the test matrix (on nonzero elements in the test matrix).\n",
+    "- As a baseline we also compute the RMSE on an random matrix with the nonzero elements in the test matrix.\n"
    ]
   },
   {
@@ -471,8 +521,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use case\n",
+    "As a \"real\" use case, we recommend x movies for user i. Also, we show the movies this user rated highest.\n",
+    "- Also we show the random top movies. Basically taking 10 random movies. It shows the actual recommendations are (in this case, although probably often) not worse than random. Rendering the RMSE on random comparison probably moot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +639,7 @@
        "9     1089                                     Reservoir Dogs  2.784442"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,6 +851,157 @@
     "topRated = getTopRatedForUser(i, filteredDataMatPD)\n",
     "joinListToMovies(topRated, moviesPD, moviesIdsLocPD)[0:20]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1232</td>\n",
+       "      <td>Сталкер</td>\n",
+       "      <td>4.996815</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1831</td>\n",
+       "      <td>Lost in Space</td>\n",
+       "      <td>4.993715</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>533</td>\n",
+       "      <td>The Shadow</td>\n",
+       "      <td>4.992817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1653</td>\n",
+       "      <td>Gattaca</td>\n",
+       "      <td>4.991792</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2528</td>\n",
+       "      <td>Logan's Run</td>\n",
+       "      <td>4.991032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>858</td>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>4.989977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1273</td>\n",
+       "      <td>Down by Law</td>\n",
+       "      <td>4.988185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1391</td>\n",
+       "      <td>Mars Attacks!</td>\n",
+       "      <td>4.987391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>3993</td>\n",
+       "      <td>Quills</td>\n",
+       "      <td>4.979176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1031</td>\n",
+       "      <td>Bedknobs and Broomsticks</td>\n",
+       "      <td>4.977297</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movieId            original_title    rating\n",
+       "0     1232                   Сталкер  4.996815\n",
+       "1     1831             Lost in Space  4.993715\n",
+       "2      533                The Shadow  4.992817\n",
+       "3     1653                   Gattaca  4.991792\n",
+       "4     2528               Logan's Run  4.991032\n",
+       "5      858             The Godfather  4.989977\n",
+       "6     1273               Down by Law  4.988185\n",
+       "7     1391             Mars Attacks!  4.987391\n",
+       "8     3993                    Quills  4.979176\n",
+       "9     1031  Bedknobs and Broomsticks  4.977297"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# But what if we used the random predictions? (Ok, the top 10 are basically a random top 10. But to make a point)\n",
+    "# - Actually, to really make a point. We should weight on total movie popularity.\n",
+    "i = filteredDataMatPD.index[0]\n",
+    "def recommend(i, filteredDataMatPD, predictedRatingsPD):\n",
+    "    x = filteredDataMatPD.T[i]\n",
+    "    y = predictedRatingsPD.T[i]\n",
+    "    actual = x[x.notnull()]\n",
+    "    predictedNotRated = y[~x.notnull()]\n",
+    "    return predictedNotRated.sort_values(ascending=False)\n",
+    "randomRecommended = recommend(i, filteredDataMatPD, pd.DataFrame(randomPredictions, columns = filteredDataMatPD.columns))\n",
+    "joinListToMovies(randomRecommended, moviesPD, moviesIdsLocPD)[0:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "We've implemented a recommender of movies, based on given Kaggle movie ratings dataset. I'm not all to happy with the results. They should be improved on.\n",
+    "\n",
+    "#### Results:\n",
+    "- A RMSE of ~3 on a scale from 1 to five is __not__ good. When I have time, I should be able to improve on this. Possibly compare to the SVD implementation in http://surpriselib.com and/or trying other CF algorithms (try a clustering approach?)\n",
+    "- The random RMSE is lower than the prediction. So in theory, we're doing worse. Allthough I could be making a mistake in calculating the actual values in the prediction matrix (After subtracting the mean). The order might be good but the actual predicted value is too far off.\n",
+    "- Why does [this article](https://cambridgespark.com/content/tutorials/implementing-your-own-recommender-systems-in-Python/index.html) think that's an acceptable RMSE?\n",
+    "- The other articles don't even evaluate at all?\n",
+    "- It's up to the reader to decide if the actual top 10 predictions are good enough. They look off, sometimes good. This could also be resulting from for example rating outliers. On the high and low side (often rated or not too often rated. I should've filtered the latter out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
